NLP TP's/texts/robotics/robotics.stackexchange_0000027648.txt
Q:

No matching function for call to ‘Set(gazebo::msgs::Vector3d*, ignition::math::Vector3d)’

Hi,
I'm following the Gazebo Tutorials.
I haven't had any problem until the World plugins and Programmatic World Control tutorial.
Output of command make
/home/doliveira/gazebo_teste/world_edit.cc: In member function ‘virtual void gazebo::WorldEdit::Load(gazebo::physics::WorldPtr, sdf::ElementPtr)’:
/home/doliveira/gazebo_teste/world_edit.cc:36:49: error: no matching function for call to ‘Set(gazebo::msgs::Vector3d*, ignition::math::Vector3d)’
           ignition::math::Vector3d(0.01, 0, 0.1));
                                                 ^
In file included from /usr/include/gazebo-4.0/gazebo/gazebo_core.hh:21:0,
                 from /usr/include/gazebo-4.0/gazebo/gazebo.hh:20,
                 from /home/doliveira/gazebo_teste/world_edit.cc:3:
/usr/include/gazebo-4.0/gazebo/msgs/msgs.hh:141:10: note: candidate: void gazebo::msgs::Set(gazebo::common::Image&, const gazebo::msgs::Image&)
     void Set(common::Image &_img, const msgs::Image &_msg);
          ^
/usr/include/gazebo-4.0/gazebo/msgs/msgs.hh:141:10: note:   no known conversion for argument 1 from ‘gazebo::msgs::Vector3d*’ to ‘gazebo::common::Image&’
/usr/include/gazebo-4.0/gazebo/msgs/msgs.hh:165:10: note: candidate: void gazebo::msgs::Set(gazebo::msgs::Image*, const gazebo::common::Image&)
     void Set(msgs::Image *_msg, const common::Image &_i);
          ^
/usr/include/gazebo-4.0/gazebo/msgs/msgs.hh:165:10: note:   no known conversion for argument 1 from ‘gazebo::msgs::Vector3d*’ to ‘gazebo::msgs::Image*’
/usr/include/gazebo-4.0/gazebo/msgs/msgs.hh:171:10: note: candidate: void gazebo::msgs::Set(gazebo::msgs::Vector3d*, const gazebo::math::Vector3&)
     void Set(msgs::Vector3d *_pt, const math::Vector3 &_v);
          ^
/usr/include/gazebo-4.0/gazebo/msgs/msgs.hh:171:10: note:   no known conversion for argument 2 from ‘ignition::math::Vector3d {aka ignition::math::Vector3<double>}’ to ‘const gazebo::math::Vector3&’
/usr/include/gazebo-4.0/gazebo/msgs/msgs.hh:177:10: note: candidate: void gazebo::msgs::Set(gazebo::msgs::Vector2d*, const gazebo::math::Vector2d&)
     void Set(msgs::Vector2d *_pt, const math::Vector2d &_v);
          ^
/usr/include/gazebo-4.0/gazebo/msgs/msgs.hh:177:10: note:   no known conversion for argument 1 from ‘gazebo::msgs::Vector3d*’ to ‘gazebo::msgs::Vector2d*’
/usr/include/gazebo-4.0/gazebo/msgs/msgs.hh:183:10: note: candidate: void gazebo::msgs::Set(gazebo::msgs::Quaternion*, const gazebo::math::Quaternion&)
     void Set(msgs::Quaternion *_q, const math::Quaternion &_v);
          ^
/usr/include/gazebo-4.0/gazebo/msgs/msgs.hh:183:10: note:   no known conversion for argument 1 from ‘gazebo::msgs::Vector3d*’ to ‘gazebo::msgs::Quaternion*’
/usr/include/gazebo-4.0/gazebo/msgs/msgs.hh:189:10: note: candidate: void gazebo::msgs::Set(gazebo::msgs::Pose*, const gazebo::math::Pose&)
     void Set(msgs::Pose *_p, const math::Pose &_v);
          ^
/usr/include/gazebo-4.0/gazebo/msgs/msgs.hh:189:10: note:   no known conversion for argument 1 from ‘gazebo::msgs::Vector3d*’ to ‘gazebo::msgs::Pose*’
/usr/include/gazebo-4.0/gazebo/msgs/msgs.hh:195:10: note: candidate: void gazebo::msgs::Set(gazebo::msgs::Color*, const gazebo::common::Color&)
     void Set(msgs::Color *_c, const common::Color &_v);
          ^
/usr/include/gazebo-4.0/gazebo/msgs/msgs.hh:195:10: note:   no known conversion for argument 1 from ‘gazebo::msgs::Vector3d*’ to ‘gazebo::msgs::Color*’
/usr/include/gazebo-4.0/gazebo/msgs/msgs.hh:201:10: note: candidate: void gazebo::msgs::Set(gazebo::msgs::Time*, const gazebo::common::Time&)
     void Set(msgs::Time *_t, const common::Time &_v);
          ^
/usr/include/gazebo-4.0/gazebo/msgs/msgs.hh:201:10: note:   no known conversion for argument 1 from ‘gazebo::msgs::Vector3d*’ to ‘gazebo::msgs::Time*’
/usr/include/gazebo-4.0/gazebo/msgs/msgs.hh:207:10: note: candidate: void gazebo::msgs::Set(gazebo::msgs::SphericalCoordinates*, const gazebo::common::SphericalCoordinates&)
     void Set(msgs::SphericalCoordinates *_s,
          ^
/usr/include/gazebo-4.0/gazebo/msgs/msgs.hh:207:10: note:   no known conversion for argument 1 from ‘gazebo::msgs::Vector3d*’ to ‘gazebo::msgs::SphericalCoordinates*’
/usr/include/gazebo-4.0/gazebo/msgs/msgs.hh:214:10: note: candidate: void gazebo::msgs::Set(gazebo::msgs::PlaneGeom*, const gazebo::math::Plane&)
     void Set(msgs::PlaneGeom *_p, const math::Plane &_v);
          ^
/usr/include/gazebo-4.0/gazebo/msgs/msgs.hh:214:10: note:   no known conversion for argument 1 from ‘gazebo::msgs::Vector3d*’ to ‘gazebo::msgs::PlaneGeom*’
make[2]: *** [CMakeFiles/world_edit.dir/world_edit.cc.o] Error 1
make[1]: *** [CMakeFiles/world_edit.dir/all] Error 2
make: *** [all] Error 2

I'm using Fedora 22 with Gazebo 4.0.2.
Did I miss some library ?
I also tried install Gazebo 7 from source, but I wasn't successful.
Thank you for your time.

Originally posted by OhMeuMenino on Gazebo Answers with karma: 3 on 2016-02-26
Post score: 0

A:

Functions which use ignition::math probably don't work with Gazebo 4, you're probably trying a tutorial for a later version.
These versions of the tutorials should work for you:

World plugins

Programmatic world control

As for not being able to install Gazebo7, I suggest you open a new question with more details so someone can help you out.

Originally posted by chapulina with karma: 7504 on 2016-02-26
This answer was ACCEPTED on the original site
Post score: 1

Original comments
Comment by OhMeuMenino on 2016-02-26:
Thank you, it works!
I will create another question about Gazebo 7 installation.

